--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700;800&family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/3ba00d0b05.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header class="header">
@@ -24,8 +25,8 @@
                 <h3 class="banner-greeting">Hi, I am</h3>
                 <h1 class="banner-title">Mary Hardy</h1>
                 <p class="banner-description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ab enim velit voluptates natus minima, assumenda culpa pariatur harum tenetur.</p>
-                <button class="btn-primary" id="btn-banner-one">Download</button>
-                <button class="btn-primary">Contact</button>
+                <button class="btn-primary" id="btn-banner-one"><i class="fa-solid fa-download"></i>Download </button>
+                <button class="btn-primary"> <i class="fa-solid fa-phone"></i>Contact</button>
             </div>
             
                 <img class="profile-picture" src="images/hardy.png" alt="profile-picture">
